# csvpeek-rs

./: Cargo.toml  Cross.toml  README.md  compile-all-platforms.sh  main.rs
.github/workflows/: rust.yml
releases/linux-x86_64/: csvpeek-rs
src/: main.rs
tests/: cli_tests.rs
